[package]
name = "got-runner"
version = "0.1.0"
edition = "2021"
description = "CLI entry point for running games and tournaments"

[dependencies]
got-engine = { path = "../engine" }
got-agents = { path = "../agents" }
got-tournament = { path = "../tournament" }
serde_json = { workspace = true }
rand = { workspace = true }
rand_chacha = { workspace = true }
clap = { version = "4", features = ["derive"] }
